--- a/PackagesMerge.Test/packages.config
+++ b/PackagesMerge.Test/packages.config
@@ -6,4 +6,5 @@
   <package id="NuGet.Packaging" version="1.0.0-pre-20150220044603" targetFramework="net45" />
   <package id="NuGet.Versioning" version="1.0.7" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net45" />
 </packages>
