--- a/PackagesMerge.Test/packages.config
+++ b/PackagesMerge.Test/packages.config
@@ -3,4 +3,5 @@
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.55" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net45" />
 </packages>
