Include nuget.exe with installer.

--- a/CsMerge/packages.config
+++ b/CsMerge/packages.config
@@ -4,6 +4,7 @@
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.55" targetFramework="net45" />
   <package id="NLog" version="4.0.1" targetFramework="net45" />
+  <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net45" />
   <package id="NuGet.Configuration" version="1.0.0-pre-20150220022717" targetFramework="net45" />
   <package id="NuGet.Packaging" version="1.0.0-pre-20150220044603" targetFramework="net45" />
   <package id="NuGet.Versioning" version="1.0.7" targetFramework="net45" />
