--- a/CsMerge/CsMerge.csproj
+++ b/CsMerge/CsMerge.csproj
@@ -107,6 +107,9 @@
     <Compile Include="UserQuestion\UserQuestionOptionsCollection.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="NuGet.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="App.config" />
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
