--- a/CsMerge/CsMerge.csproj
+++ b/CsMerge/CsMerge.csproj
@@ -107,10 +107,11 @@
     <Compile Include="UserQuestion\UserQuestionOptionsCollection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NuGet.exe">
+    <None Include="App.config" />
+    <Content Include="..\packages\NuGet.CommandLine.3.3.0\tools\NuGet.exe">
+      <Link>NuGet.exe</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="App.config" />
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
