--- a/CsMerge.Core/packages.config
+++ b/CsMerge.Core/packages.config
@@ -2,8 +2,12 @@
 <packages>
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
   <package id="NLog" version="4.0.1" targetFramework="net45" />
-  <package id="NuGet.Configuration" version="1.0.0-pre-20150220022717" targetFramework="net45" />
-  <package id="NuGet.Packaging" version="1.0.0-pre-20150220044603" targetFramework="net45" />
-  <package id="NuGet.Versioning" version="1.0.7" targetFramework="net45" />
+  <package id="NuGet.Common" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Configuration" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Frameworks" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging.Core" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Versioning" version="4.9.4" targetFramework="net472" />
 </packages>
