--- a/CsUpdate.Core/packages.config
+++ b/CsUpdate.Core/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
   <package id="NLog" version="4.0.1" targetFramework="net45" />
-  <package id="NuGet.Configuration" version="1.0.0-pre-20150220022717" targetFramework="net45" />
-  <package id="NuGet.Versioning" version="1.0.7" targetFramework="net45" />
+  <package id="NuGet.Common" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Configuration" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Frameworks" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging.Core" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Versioning" version="4.9.4" targetFramework="net472" />
 </packages>
