--- a/CsUpdate/packages.config
+++ b/CsUpdate/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
   <package id="NLog" version="4.0.1" targetFramework="net46" />
-  <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net46" />
-  <package id="NuGet.Configuration" version="1.0.0-pre-20150220022717" targetFramework="net46" />
-  <package id="NuGet.Packaging" version="1.0.0-pre-20150220044603" targetFramework="net46" />
-  <package id="NuGet.Versioning" version="1.0.7" targetFramework="net46" />
+  <package id="NuGet.CommandLine" version="4.9.4" targetFramework="net472" developmentDependency="true" />
+  <package id="NuGet.Common" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Configuration" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Frameworks" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging.Core" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Versioning" version="4.9.4" targetFramework="net472" />
 </packages>
