--- a/PackagesMerge.Test/TestFiles/src/Project/Local.csproj
+++ b/PackagesMerge.Test/TestFiles/src/Project/Local.csproj
@@ -115,7 +115,94 @@
 		</Reference>
 
 	</ItemGroup>
-	<ItemGroup>
+	
+  <ItemGroup>
+
+    <PackageReference Include="CsMerge.PackageReferences.NoChanges" Version="1.0.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.DeletedInIncoming" Version="1.0.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.DeletedInIncomingUpdatedInLocal" Version="1.0.2" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInLocal" Version="1.0.2" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInIncoming" Version="1.0.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Identical" Version="1.0.1" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionChangeOnly" Version="1.0.2" />
+
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionChangeOnly.DifferentLength" Version="1.1" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.OtherChanges" Version="1.0.2" Condition="'$(TargetFramework)' == 'Local'" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionWildCard.WildCardHigher" Version="1.1.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionWildCard.WildCardLower" Version="1.2.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionWildCard.WildCardEqual" Version="1.1.*" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionWildCard.VsZero" Version="1.1.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionWildCard.VsWildCard" Version="1.1.*" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionWildCard.VsNonZero" Version="1.1.1" />
+
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.IncludeAssets.Different" Version="1.0.2" >
+      <IncludeAssets>contentFiles</IncludeAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.IncludeAssets.Equivalent" Version="1.0.2" >
+      <IncludeAssets>native;contentFiles</IncludeAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.IncludeAssets.Equal" Version="1.0.2" >
+      <IncludeAssets>contentFiles;native</IncludeAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.ExcludeAssets.Different" Version="1.0.2" >
+      <ExcludeAssets>contentFiles</ExcludeAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.ExcludeAssets.Equivalent" Version="1.0.2" >
+      <ExcludeAssets>native;contentFiles</ExcludeAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.ExcludeAssets.Equal" Version="1.0.2" >
+      <ExcludeAssets>native;contentFiles</ExcludeAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.PrivateAssets.Different" Version="1.0.2" >
+      <PrivateAssets>contentFiles</PrivateAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.PrivateAssets.Equivalent" Version="1.0.2" >
+      <PrivateAssets>native;contentFiles</PrivateAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.PrivateAssets.Equal" Version="1.0.2" >
+      <PrivateAssets>native;contentFiles</PrivateAssets>
+    </PackageReference>
+    
+    <PackageReference Include="CsMerge.PackageReferences.UpdatedInBoth.Different.VersionAsElement" >
+      <Version>1.0.2</Version>
+    </PackageReference>
+
+    <PackageReference Include="CsMerge.PackageReferences.Duplicate.Identical" Version="1.0.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.Duplicate.Identical" Version="1.0.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.Duplicate.Different.VersionChangeOnly" Version="1.1.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.Duplicate.Different.VersionChangeOnly" Version="1.2.0" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.Duplicate.Different.OtherChanges" Version="1.1.0" Condition="'$(TargetFramework)' == 'Local1'" />
+    
+    <PackageReference Include="CsMerge.PackageReferences.Duplicate.Different.OtherChanges" Version="1.2.0" Condition="'$(TargetFramework)' == 'Local2'" />
+    
+  </ItemGroup>
+  
+  <ItemGroup>
 	  <Compile Include="NoChange.cs" />
 	  <Compile Include="DeleteInIncoming.cs" />
 	  <!--Updates aren't possible when there is only a key as changes will mean they are not matched -->
