--- a/PackagesMerge.Test/packages.config
+++ b/PackagesMerge.Test/packages.config
@@ -3,8 +3,13 @@
   <package id="LibGit2Sharp" version="0.21.0.176" targetFramework="net45" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.55" targetFramework="net45" />
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
-  <package id="NuGet.Packaging" version="1.0.0-pre-20150220044603" targetFramework="net45" />
-  <package id="NuGet.Versioning" version="1.0.7" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
+  <package id="NuGet.Common" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Configuration" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Frameworks" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging.Core" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Versioning" version="4.9.4" targetFramework="net472" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net45" />
 </packages>
