--- a/Project/packages.config
+++ b/Project/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Mono.Cecil" version="0.9.6.1" targetFramework="net45" />
-  <package id="NuGet.Versioning" version="1.0.7" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
+  <package id="NuGet.Common" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Configuration" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Frameworks" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Packaging.Core" version="4.9.4" targetFramework="net472" />
+  <package id="NuGet.Versioning" version="4.9.4" targetFramework="net472" />
 </packages>
