--- a/PackagesMerge.Test/PackagesMerge.Test.csproj
+++ b/PackagesMerge.Test/PackagesMerge.Test.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolvers\ExceptionResolver.cs" />
     <Compile Include="Resolvers\TestDuplicateResolver.cs" />
+    <Compile Include="Resolvers\UserPackageReferenceResolver.cs" />
     <Compile Include="ResourceHelper.cs" />
     <Compile Include="UserQuestionTest.cs" />
   </ItemGroup>
